--- a/style-ar.css
+++ b/style-ar.css
@@ -81,11 +81,12 @@ left: auto; */
 
 .three60section {
   
-    max-width: 300px;
+    max-width: 80%;
  
-    padding-bottom: 5px;
+    padding-bottom: 10px;
 
 }
+     
 
 
 
