--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     color: white;
     line-height: 1.6;
     background-color: var(--primary-color);
+    /* background-color: black; */
 }
 
 a {
