--- a/style.css
+++ b/style.css
@@ -104,6 +104,13 @@ p {
     height: 100%;
 }
 
+.full-height {
+    max-height: 100vh;
+    /* background-color: red; */
+    /* border: 2px solid black; */
+    /* padding: 0 auto; */
+}
+
 
 
 
